--- a/README.pod
+++ b/README.pod
@@ -18,26 +18,26 @@ version 0.001
     use Data::Printer;
 
     my $s = Algorithm::SlopeOne->new;
-    $s->update({
-        alice => {
+    $s->update([
+        {
             squid       => 1.0,
             cuttlefish  => 0.5,
             octopus     => 0.2,
-        }, bob => {
+        }, {
             squid       => 1.0,
             octopus     => 0.5,
             nautilus    => 0.2,
-        }, carole => {
+        }, {
             squid       => 0.2,
             octopus     => 1.0,
             cuttlefish  => 0.4,
             nautilus    => 0.4,
-        }, dave => {
+        }, {
             cuttlefish  => 0.9,
             octopus     => 0.4,
             nautilus    => 0.5,
         },
-    });
+    ]);
     p $s->predict({ squid => 0.4 });
 
     # Output:
@@ -67,28 +67,22 @@ Ratings count matrix.
 
 Reset the instance.
 
-=head2 update($userdata)
+=head2 update($userprefs)
 
-Update matrices with data in a form:
+Update matrices with user preference data, accepts HashRef or ArrayRef of HashRefs:
 
-    {
-        user1 => {
-            item1 => rating1,
-            item2 => rating2,
-            ...
-        },
-        user2 => ...
-    }
+    $s->predict({ StarWars => 5, LOTR => 5, StarTrek => 3, Prometheus => 1 });
+    $s->predict({ StarWars => 3, StarTrek => 5, Prometheus => 4 });
+    $s->predict([
+        { IronMan => 4, Avengers => 5, XMen => 3 },
+        { XMen => 5, DarkKnight => 5, SpiderMan => 3 },
+    ]);
 
 =head2 predict($userprefs)
 
-Recommend new items given item ratings in a form:
+Recommend new items given known item ratings.
 
-    {
-        item1 => rating1,
-        item2 => rating2,
-        ...
-    }
+    $s->predict({ StarWars => 5, LOTR => 5, Prometheus => 1 });
 
 =head1 REFERENCES
 
@@ -109,6 +103,14 @@ L<Collaborative filtering made easy|http://www.serpentine.com/blog/2006/12/12/co
 =item *
 
 L<github.com/ashleyw/Slope-One|https://github.com/ashleyw/Slope-One> - Ruby port of the above by Ashley Williams (used to borrow test code)
+
+=item *
+
+L<Programming Collective Intelligence book|http://shop.oreilly.com/product/9780596529321.do> by Toby Segaran
+
+=item *
+
+L<Data Sets by GroupLens Research|http://www.grouplens.org/node/12>
 
 =back
 
