removed non-core deps

--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ Algorithm::SlopeOne - Slope One collaborative filtering for rated resources
 
 =head1 VERSION
 
-version 0.002
+version 0.003
 
 =head1 SYNOPSIS
 
@@ -83,6 +83,8 @@ Update matrices with user preference data, accepts a HashRef or an ArrayRef of H
 Recommend new items given known item ratings.
 
     $s->predict({ StarWars => 5, LOTR => 5, Prometheus => 1 });
+
+=for Pod::Coverage new
 
 =head1 REFERENCES
 
